# Coral

./: .gitignore
Coral.Managed/: Coral.Managed-Static.csproj
Coral.Native/Include/Coral/: Core.hpp  HostInstance.hpp
Coral.Native/Source/Coral/: HostInstance.cpp
Example/Example.Managed/: Example.Managed-Static.csproj
Tests/Testing.Managed/: Testing.Managed-Static.csproj
cmake/: CMakeLists.txt  CMakePresets.json  CoralConfig.cmake.in
cmake/modules/: DotNetBuild.cmake
